[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylinode-node-cache-manager"
version = "0.1.0"
description = "Node-level cache manager for models and datasets"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Linode Community", email = "support@linode.com" }]
keywords = ["linode", "lke", "cache", "daemonset", "kubernetes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "prometheus-client>=0.25.0",
    "httpx>=0.28.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "huggingface-hub>=0.33.0",
    "boto3>=1.39.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.11",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
pylinode-node-cache-manager = "pylinode_node_cache_manager.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --tb=short"
markers = ["unit: unit tests", "integration: integration tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.uv]
package = true
default-groups = ["dev"]
