[project]
name = "pylinode-vlan-topology-exporter"
version = "0.1.0"
description = "Prometheus exporter for Linode VLAN topology"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "linode-api4>=5.43.0",
    "prometheus-client>=0.25.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
pylinode-vlan-topology-exporter = "pylinode_vlan_topology_exporter.cli:main"
pylinode-vlan-topology-ui = "pylinode_vlan_topology_exporter.topology_ui_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
